Bug #42799 | Maria: pushbuild: segfault related to stack_ends_here with pool-of-threads | ||
---|---|---|---|
Submitted: | 12 Feb 2009 17:58 | Modified: | 10 Mar 2009 21:04 |
Reporter: | Guilhem Bichot | Email Updates: | |
Status: | Closed | Impact on me: | |
Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
Version: | 6.0-maria | OS: | Linux |
Assigned to: | Sergei Golubchik | CPU Architecture: | Any |
[12 Feb 2009 17:58]
Guilhem Bichot
[16 Feb 2009 18:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66538 2714 Sergei Golubchik 2009-02-16 Bug #42799 Maria: pushbuild: segfault related to stack_ends_here with pool-of-threads remove a superfluous assigment (that was dereferencing thd->mysys_var before it was set)
[17 Feb 2009 11:46]
Bugs System
Pushed into 6.0.10-alpha (revid:serg@mysql.com-20090217113558-vpsqsyjule7nz0gk) (version source revid:serg@mysql.com-20090216182248-llk80kqtadp14gi9) (merge vers: 6.0.10-alpha) (pib:6)
[10 Mar 2009 21:04]
Guilhem Bichot
wrong code line was never released, nothing to document