Bug #42799 Maria: pushbuild: segfault related to stack_ends_here with pool-of-threads remove a superfluous assigment (that was dereferencing thd->mysys_var before it was set)